docs: revised readme to add installation and how to play