@@ -1,5 +1,22 @@
-
 # Catch-The-Proot
 <img width="768" height="432" alt="Untitled design" src="https://github.com/user-attachments/assets/cf7277d3-5274-4428-a65c-b84d710dc91e" />
 <img width="768" height="432" alt="Untitled design (5)" src="https://github.com/user-attachments/assets/d9a4107b-c10d-4d22-ba97-f2f42bcd8434" />
 <img width="768" height="432" alt="Untitled design (2)" src="https://github.com/user-attachments/assets/308f899a-ee8a-48a3-b81a-bf4bce1527b8" />
+
+## How to Play
+1. **Move:** `LEFT` and `RIGHT` arrow keys.
+2. **Dash:** Double-tap `LEFT` or `RIGHT` arrow keys.
+3. **Sprint:** hold `SHIFT` key.
+4. Catch fruits.
+5. Avoid trash.
+6. Missed fruits deduct points.
+
+## How to Run Locally
+This project uses **JavaFX 21**.
+
+1. Download the [JavaFX SDK](https://gluonhq.com/products/javafx/).
+2. Open the project in your IDE (e.g., IntelliJ IDEA or Eclipse).
+3. Ensure the JavaFX `lib` folder is added to your project's libraries.
+4. Add the following to your JVM run configuration options, replacing the path with your local JavaFX SDK path:
+   `--module-path "C:\path\to\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml,javafx.media`
+5. Run the `main.Main` class.
